global-UI-Issues -- Font, breadcrumb, footer, gap issues are fixed

--- a/src/app/components/getting-reimbursed-page/non-payments/non-payments.component.scss
+++ b/src/app/components/getting-reimbursed-page/non-payments/non-payments.component.scss
@@ -191,7 +191,7 @@
     .time--period {
       .horizontal-align {
         display: inline-block;
-        margin: 3px 0;
+        margin: 5px 0;
       }
       button {
         span:first-child {
